--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -8,5 +8,5 @@ jobs:
     steps:
       - uses: actions/checkout@v2
       
-      - name: create branch & push
+      - name: Create branch & push
         run: git branch mctest | git push origin mctest
