--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -10,7 +10,13 @@ jobs:
         with:
           repo-token: ${{ secrets.GITHUB_TOKEN }}
       
-      - name: Create branch & push
-        run: git branch mctest |
-          git remote -v |
-          git push origin mctest 
+      - name: Create Branch
+        uses: peterjgrainger/action-create-branch@v2.2.0
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+        with:
+          branch: 'mctest'
+          sha: '${{ github.event.pull_request.head.sha }}'
+        #run: git branch mctest |
+        #  git remote -v |
+        #  git push origin mctest 
