--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -13,6 +13,7 @@ jobs:
       - name: Create Branch
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-        run: git branch mctest |
+        run: |
+          #git branch mctest |
           git remote -v |
-          git push origin mctest 
+          #git push origin mctest 
