--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -6,12 +6,13 @@ jobs:
   build:
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@v2
+      - name: Checkout Code
+        uses: actions/checkout@v2
         with:
           repo-token: ${{ secrets.GITHUB_TOKEN }}
           
       - name: Create McBranch
-        with:
+        env:
           repo-token: ${{ secrets.GITHUB_TOKEN }}
         run: |
           #git branch mctest |
