--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -14,7 +14,4 @@ jobs:
       - name: Create McBranch
         env:
           repo-token: ${{ secrets.GITHUB_TOKEN }}
-        run: |
-          git branch mctest |
-          git remote -v |
-          git push origin mctest 
+        run: git remote -v
